[package]
name = "enmesh-firmware"
version = "0.1.0"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
common = { path = "../common" }


[dev-dependencies]
# ux example support
embedded-graphics-simulator = { version = "*", default-features = false, features = [
    "with-sdl",
] }


[features]
# ux choice for demonstrations
ux-heltec = []
